--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.1",
   "scripts": {
     "test": "mocha *spec.js && ./run_tests",
-    "build": "noderify js_language_server.js > dist/js_language_server.js"
+    "build": "yarn build:osx && build:linux",
+    "build:osx": "pkg --target macos --out-path dist js_language_server.js",
+    "build:linux": "noderify --filter fsevents --filter spawn-sync js_language_server.js > dist/js_language_server.js"
   },
   "dependencies": {
     "@babel/parser": "^7.2.3",
     "@babel/traverse": "^7.2.3",
+    "chokidar": "^2.1.0",
+    "js-editor-tags": "github:artemave/js-editor-tags",
     "yargs": "^12.0.5"
   },
   "devDependencies": {
@@ -15,6 +19,7 @@
     "electron-mocha": "^6.0.4",
     "eslint": "^5.13.0",
     "mocha": "^5.2.0",
-    "noderify": "^4.1.0"
+    "noderify": "^4.1.0",
+    "pkg": "^4.3.7"
   }
 }
