--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@babel/parser": "^7.2.3",
     "@babel/traverse": "^7.2.3",
     "chokidar": "^2.1.0",
-    "js-editor-tags": "github:artemave/js-editor-tags",
+    "js-editor-tags": "^0.1.3",
     "yargs": "^12.0.5"
   },
   "devDependencies": {
