--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,12 @@ jobs:
        - run: sudo apt-get update
        - run: sudo apt-get install --yes silversearcher-ag git vim
        - checkout
+       - run: sudo curl -LO https://github.com/BurntSushi/ripgrep/releases/download/11.0.2/ripgrep_11.0.2_amd64.deb
+       - run: sudo dpkg -i ripgrep_11.0.2_amd64.deb
+       - run: sudo curl -LO https://github.com/neovim/neovim/releases/download/stable/nvim.appimage
+       - run: sudo chmod +x nvim.appimage
+       - run: sudo ./nvim.appimage --appimage-extract
+       - run: sudo chmod -R a+rwx ./squashfs-root
        - run: git clone https://github.com/junegunn/vader.vim.git
        - run: yarn
        - run: yarn test
