--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/parser": "^7.8.7",
     "@babel/traverse": "^7.8.6",
+    "@babel/types": "^7.9.6",
     "js-editor-tags": "^0.1.3",
     "yargs": "^15.3.0"
   },
