--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "vjs",
   "version": "0.0.1",
   "scripts": {
-    "test": "mocha spec && ./run_tests"
+    "test": "mocha spec && ./run_tests",
+    "test:mocha": "mocha spec"
   },
   "dependencies": {
-    "@babel/parser": "^7.8.7",
-    "@babel/traverse": "^7.8.6",
-    "@babel/types": "^7.9.6",
+    "@babel/parser": "^7.10.0",
+    "@babel/traverse": "^7.10.0",
+    "@babel/types": "^7.10.0",
     "js-editor-tags": "^0.1.3",
     "yargs": "^15.3.0"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^7.1.0",
     "mocha": "^7.1.0"
   }
 }
