--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,5 +14,4 @@ jobs:
        - run: sudo chmod +x nvim.appimage
        - run: sudo ./nvim.appimage --appimage-extract
        - run: sudo chmod -R a+rwx ./squashfs-root
-       - run: yarn
-       - run: yarn test
+       - run: ./run_tests
