Better ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,7 @@ jobs:
      steps:
        - checkout
        - run: sudo apt-get update
-       - run: sudo apt-get install --yes silversearcher-ag git vim
-       - run: sudo curl -LO https://github.com/BurntSushi/ripgrep/releases/download/11.0.2/ripgrep_11.0.2_amd64.deb
-       - run: sudo dpkg -i ripgrep_11.0.2_amd64.deb
+       - run: sudo apt-get install --yes git ripgrep
        - run: sudo npm install -g typescript-language-server typescript
        - run: sudo curl -LO https://github.com/neovim/neovim/releases/download/stable/nvim.appimage
        - run: sudo chmod +x nvim.appimage
